# VSL

./: .gitignore  CMakeLists.txt  L3D_VSL.sln  README.md  vsconfig.vcxproj.user.in
Models/: GranitoH.tif  Models.vcxproj  Models.vcxproj.filters  fonte-finallambert.dae  rainbowBench.mtl  rainbowBench2.mtl
Models/fonts/: arial.tga  comic10.tga
Models/models/: Granito_1.tif
Models/shaders/: color.frag  color.vert  dirlightdiffambpix.frag  dirlightdiffambpix.vert
Models/source/: assimp.cpp
VSL/: CMakeLists.txt  VSL.vcxproj  VSL.vcxproj.filters
VSL/include/: vsFontLib.h  vsMathLib.h  vsModelLib.h  vsProfileLib.h  vsResModelLib.h  vsResourceLib.h  vsShaderLib.h  vsSurfRevLib.h  vslConfig.h.in  vslibs.h
VSL/include/vsl/: vsFontLib.h  vsGLInfoLib.h  vsGeometryLib.h  vsLogLib.h  vsMathLib.h  vsModelLib.h  vsProfileLib.h  vsResourceLib.h  vsShaderLib.h  vsSurfRevLib.h  vslConfig.h  vslibs.h
VSL/source/: vsFontLib.cpp  vsGLInfoLib.cpp  vsGeometryLib.cpp  vsLogLib.cpp  vsMathLib.cpp  vsModelLib.cpp  vsProfileLib.cpp  vsResModelLib.cpp  vsResourceLib.cpp  vsShaderLib.cpp  vsSurfRevLib.cpp
contrib/assimp3.3.1/: CMakeLists.txt
contrib/assimp3.3.1/buildandroid/contrib/zlib/: CTestTestfile.cmake
contrib/assimp3.3.1/buildandroid/test/gtest/src/gtest-stamp/: gtest-build-RelWithDebInfo.cmake  gtest-configure-RelWithDebInfo.cmake  gtest-download-Release.cmake
contrib/assimp3.3.1/buildandroid/test/gtest/tmp/: gtest-cfgcmd.txt  gtest-gitclone.cmake  gtest-gitupdate.cmake
contrib/glew/: CMakeLists.txt  glew.c
contrib/tinyxml/: CMakeLists.txt
demo/: CMakeLists.txt  config.h.in
demo/source/: vslDemo - Clean.cpp  vslDemo.cpp
fonts/: arial.xml  arial10.tga  arial10.xml  comic10.xml
models/: bench.mtl
shaders/: color.frag  color.vert  dirlightdiffambpix.frag  dirlightdiffambpix.vert  pixeldirdifambspec.frag  pixeldirdifambspec.vert
